<resources>
    <string name="app_name">The Beast Of The Labyrinth</string>
    <string name="pause">Pause</string>
    <string name="game_settings">Game Settings</string>
    <string name="dark_mode">DarkMode</string>
    <string name="coin_number">#collected / #whole_number</string>
    <string name="timer">Time:</string>
    <string name="back">Back</string>
    <string name="how_to_move">How to move:</string>
    <string name="how_to_move_explanation">Just tap on the cell next to you.</string>
    <string name="how_to_win">What you need to win:</string>
    <string name="how_to_win_explanation">You can escape any time you want, just tap on the exit cell, when you are there. But for gaining coins you get more score! You can check it out in the scoreboard.</string>
    <string name="version">Version: 1.0</string>
    <string name="continue_text">Continue</string>
    <string name="exit">Exit</string>
    <string name="win">Congratulations! You`ve completed the level!</string>
    <string name="fail">Game Over</string>
    <string name="levels">Levels</string>
    <string name="start">Start</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="save_results">Your results are saved. Go to the \"Scores\" to view them from start screen</string>
    <string name="select_level">Select level:</string>
    <string name="warning">Tap twice on exit to flee!</string>
    <string name="settings_warning">This dangerous option was disabled due to unstable behavior when it\'s unchecked</string>
    <string name="delete">Delete all scores</string>
    <string name="scores">Scores</string>
    <string name="about_the_game">You need to get out of the labyrinth, and do not be caught by the beast</string>
    <string-array name="Levels">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
        <item>Level 5</item>
        <item>Level 6</item>
        <item>Level 7</item>
        <item>Level 8</item>
        <item>Level 9</item>
    </string-array>
    </resources>
