<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.fourhorsemenoftheapocalypse.thebeastofthelabyrinth.Help"
    android:background="@color/gray">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
        android:textColor="@color/black"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/atomic_age"
        android:textSize="25sp"
        android:text="@string/back"
        android:layout_below="@id/text4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_game"
        android:text="About the game:"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:fontFamily="@font/aclonica"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_game_exactly"
        android:layout_below="@id/about_game"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/artifika"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/about_the_game"/>

    <TextView
        android:fontFamily="@font/aclonica"
        android:layout_below="@id/about_game_exactly"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_move"
        android:textSize="40sp" />

    <TextView
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="30sp"
        android:id="@+id/text2"
        android:layout_below="@id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/artifika"
        android:text="@string/how_to_move_explanation" />

    <TextView
        android:fontFamily="@font/aclonica"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/text3"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_win" />

    <TextView
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="30sp"
        android:id="@+id/text4"
        android:layout_below="@id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/artifika"
        android:text="@string/how_to_win_explanation"
        android:layout_marginBottom="10dp"/>

    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
