<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainGameActivity"
    android:background="@color/black"
    android:id="@+id/baselayout">

    <TextView
        android:id="@+id/level_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="Level: 'current level'"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/timerview"
        android:layout_below="@id/level_text"
        android:layout_alignLeft="@id/level_text"
        android:text="@string/timer"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Chronometer
        android:id="@+id/chronometr"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_alignTop="@id/timerview"
        android:layout_toRightOf="@id/timerview"
        android:layout_marginLeft="3dp"
        android:layout_alignBottom="@id/timerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/button_pause"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--style="?android:attr/buttonBarButtonStyle"-->

    <TableLayout
        android:id="@+id/table"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow android:id="@+id/tablerow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableRow android:id="@+id/tablerow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableRow android:id="@+id/tablerow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableRow android:id="@+id/tablerow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableRow android:id="@+id/tablerow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableRow android:id="@+id/tablerow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableRow android:id="@+id/tablerow7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableRow android:id="@+id/tablerow8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        
    </TableLayout>

    <RelativeLayout
        android:layout_below="@id/table"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/coin_img"
            android:textColor="@color/white"
            android:background="@drawable/coin"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_marginRight="10sp"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:textSize="20sp" />
        <TextView
            android:layout_toRightOf="@id/coin_img"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text=":"
            android:textSize="50sp" />
        <TextView
            android:id="@+id/number_of_collected_coins"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/coin_img"
            android:layout_marginStart="20dp"
            android:textSize="50sp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coin_number"/>
    </RelativeLayout>

</RelativeLayout>